// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slider renders horizontal Slider correctly 1`] = `
<DocumentFragment>
  <div
    class="widget-slider"
  >
    <div
      class="rc-slider"
    >
      <div
        class="rc-slider-rail"
      />
      <div
        class="rc-slider-track"
        style="left: 0%; width: 0%;"
      />
      <div
        class="rc-slider-step"
      />
      <div
        aria-disabled="false"
        aria-valuemax="100"
        aria-valuemin="-100"
        aria-valuenow="-100"
        class="rc-slider-handle"
        role="slider"
        style="left: 0%; transform: translateX(-50%);"
        tabindex="0"
      />
      <div
        class="rc-slider-mark"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Slider renders markers correctly 1`] = `
<DocumentFragment>
  <div
    class="widget-slider"
  >
    <div
      class="rc-slider rc-slider-with-marks"
    >
      <div
        class="rc-slider-rail"
      />
      <div
        class="rc-slider-track"
        style="left: 0%; width: 0%;"
      />
      <div
        class="rc-slider-step"
      >
        <span
          class="rc-slider-dot rc-slider-dot-active"
          style="left: 0%;"
        />
        <span
          class="rc-slider-dot"
          style="left: 25%;"
        />
        <span
          class="rc-slider-dot"
          style="left: 50%;"
        />
        <span
          class="rc-slider-dot"
          style="left: 75%;"
        />
        <span
          class="rc-slider-dot"
          style="left: 100%;"
        />
      </div>
      <div
        aria-disabled="false"
        aria-valuemax="100"
        aria-valuemin="-100"
        aria-valuenow="-100"
        class="rc-slider-handle"
        role="slider"
        style="left: 0%; transform: translateX(-50%);"
        tabindex="0"
      />
      <div
        class="rc-slider-mark"
      >
        <span
          class="rc-slider-mark-text rc-slider-mark-text-active"
          style="transform: translateX(-50%); left: 0%;"
        >
          -100
        </span>
        <span
          class="rc-slider-mark-text"
          style="transform: translateX(-50%); left: 25%;"
        >
          -50
        </span>
        <span
          class="rc-slider-mark-text"
          style="transform: translateX(-50%); left: 50%;"
        >
          0
        </span>
        <span
          class="rc-slider-mark-text"
          style="transform: translateX(-50%); left: 75%;"
        >
          50
        </span>
        <span
          class="rc-slider-mark-text"
          style="transform: translateX(-50%); left: 100%;"
        >
          100
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Slider renders vertical Slider correctly 1`] = `
<DocumentFragment>
  <div
    class="widget-slider widget-slider-vertical"
  >
    <div
      class="rc-slider rc-slider-vertical"
    >
      <div
        class="rc-slider-rail"
      />
      <div
        class="rc-slider-track"
        style="bottom: 0%; height: 0%;"
      />
      <div
        class="rc-slider-step"
      />
      <div
        aria-disabled="false"
        aria-valuemax="100"
        aria-valuemin="-100"
        aria-valuenow="-100"
        class="rc-slider-handle"
        role="slider"
        style="bottom: 0%; transform: translateY(+50%);"
        tabindex="0"
      />
      <div
        class="rc-slider-mark"
      />
    </div>
  </div>
</DocumentFragment>
`;
